--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
     "name": "management",
     "version": "1.0.0",
     "scripts": {
-        "client": "cd client && yarn start",    
-        "server": "nodemon server.js",         
+        "client": "cd client && yarn start",
+        "server": "nodemon server.js",
         "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\""
     },
     "dependencies": {
+        "axios": "^0.19.2",
         "body-parser": "^1.18.3",
         "express": "^4.16.4"
     },
