--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "dependencies": {
         "axios": "^0.19.2",
         "body-parser": "^1.18.3",
-        "express": "^4.16.4"
+        "express": "^4.16.4",
+        "http-proxy-middleware": "^0.20.0",
+        "mysql": "^2.18.1"
     },
     "devDependencies": {
         "concurrently": "^4.0.1"
