--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "body-parser": "^1.18.3",
         "express": "^4.16.4",
         "http-proxy-middleware": "^0.20.0",
+        "multer": "^1.4.2",
         "mysql": "^2.18.1"
     },
     "devDependencies": {
